--- a/videogames-store/src/index.css
+++ b/videogames-store/src/index.css
@@ -44,10 +44,12 @@ a:hover {
 }
 
 body {
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  margin: 0;
+  padding: 0;
+  min-width: 100vw;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
