--- a/videogames-store/src/index.css
+++ b/videogames-store/src/index.css
@@ -1,5 +1,8 @@
+/* Importar la fuente Outfit de Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Outfit', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,19 +20,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Outfit', sans-serif;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
+body, html {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
 #root {
+  min-height: 100vh;
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
