--- a/videogames-store/src/App.css
+++ b/videogames-store/src/App.css
@@ -1,10 +1,8 @@
 #root {
-  width: 100vw;
-  min-width: 100vw;
+  width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
-  overflow-x: hidden;
 }
 
 .logo {
@@ -13,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
